[package]
name = "tests"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
license = "MIT"
publish = false

[features]
std = ["valuable/std"]
derive = ["valuable/derive"]

[dependencies]
valuable = { path = "../valuable", default-features = false }

[dev-dependencies]
trybuild = "1"
