[package]
name = "valuable-derive"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
license = "MIT"
# rust-version = "1.42.0"
description = "Macros for `valuable` crate."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.60", features = ["extra-traits"] }

[dev-dependencies]
valuable = { path = "../valuable", features = ["derive"] }
