[package]
name = "valuable-derive"
version = "0.1.0"
edition = "2018"
license = "MIT"
rust-version = "1.51.0"
description = "Macros for the `valuable` crate."
repository = "https://github.com/tokio-rs/valuable"
categories = [
    "development-tools::debugging",
    "encoding",
]
keywords = [
    "valuable",
    "serialization",
    "debugging",
    "no_std",
]
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.60", features = ["extra-traits"] }

[dev-dependencies]
valuable = { path = "../valuable", features = ["derive"] }
