[package]
name = "valuable-json"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "MIT"
description = "JSON support for Valuable."

[features]
default = ["std"]

# NOTE: Disabling `std` feature is not supported yet.
std = ["valuable/std"]

[dependencies]
valuable = { version = "0.1", path = "../valuable", default-features = false }
ryu = "1"

[dev-dependencies]
valuable = { version = "0.1", path = "../valuable", features = ["derive"] }
