[package]
name = "valuable-serde"
version = "0.1.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "MIT"
description = "`serde::Serialize` implementation for `Valuable` types."
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/tokio-rs/valuable"
categories = [
    "development-tools::debugging",
    "encoding",
]
keywords = [
    "valuable",
    "serialization",
    "serde",
    "no_std",
]

[features]
default = ["std"]

std = ["alloc", "valuable/std", "serde/std"]
alloc = ["valuable/alloc", "serde/alloc"]

[dependencies]
valuable = { version = "0.1", path = "../valuable", default-features = false }
serde = { version = "1.0.103", default-features = false }

[dev-dependencies]
valuable = { version = "0.1", path = "../valuable", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_test = "1"
