[package]
name = "valuable"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
license = "MIT"
description = "Values"

[features]
default = ["std"]

# Provide derive(Valuable) macro
derive = ["valuable-derive"]

# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
std = ["alloc"]

# Provide imps for types in Rust's `alloc` library.
alloc = []

# Provides serde_json::Value instrument for valuable
json = ["serde_json"]

[dependencies]
valuable-derive = { version = "0.1.0", optional = true, path = "../valuable-derive" }
serde_json = { version = "1.0.46", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "structable"
harness = false
